--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
+    "start": "set \"BROWSER=chrome\" &&  react-scripts start",
     "test": "react-scripts test"
   },
   "dependencies": {
